# console_chess

./: .gitignore  CMakeLists.txt
src/: Board.cpp  Board.hpp  ChessException.cpp  ChessException.hpp  Debug.hpp  Gamestate.cpp  Gamestate.hpp  Message.cpp  Message.hpp  MessageManager.cpp  MessageManager.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Prompt.cpp  Prompt.hpp  StateFactory.cpp  StateFactory.hpp  Util.cpp  Util.hpp  Warnings.hpp  main.cpp
